[workspace]
resolver = "3"
members = ["esp32-thermometer", "thermometer-data", "thermometer-logger"]

[workspace.dependencies]
bme280 = { version = "0.5.1", default-features = false }
postcard = "1.1.3"
thermometer-data = { path = "./thermometer-data" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
