[package]
edition = "2024"
name = "esp32-thermometer"
rust-version = "1.88"
version = "0.1.0"
authors = ["emily Crandall Fleischman <zyxw59@gmail.com>"]
license = "GPL-v3.0-or-later"

[dependencies]
bme280 = { workspace = true, features = ["async", "with_defmt"] }
defmt = "1.0.1"
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-net = { version = "0.7.1", features = [
  "defmt",
  "dhcpv4",
  "mdns",
  "medium-ethernet",
  "tcp",
] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embedded-io-async = { version = "0.6.0" }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = [
  "defmt",
  "esp32",
  "panic-handler",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32"] }
esp-hal = { version = "1.0.0", features = ["defmt", "esp32", "unstable"] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32"] }
esp-radio = { version = "0.17.0", features = [
  "defmt",
  "esp-alloc",
  "esp32",
  "smoltcp",
  "unstable",
  "wifi",
] }
esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32",
] }
postcard = { workspace = true, features = ["use-defmt"] }
static_cell = "2.1.1"
thermometer-data = { workspace = true }
